2015-02-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix some spacing issues

	* src/toolbar-prefs.c (customize_dialog_cb): allocate extra
	vertical space to the available and current toolbar item lists;
	(create_toolbar_page): separate the 'restore' and 'current'
	buttons by minimum 5px.

2015-02-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (bw_enable_mailbox_menus): suppress cppcheck
	null pointer error.

2015-02-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/ab-main.c (address_book_change_state): do not crash after
	deleting address book.

2015-02-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/application-helpers.c (libbalsa_window_get_menu_bar),
	(libbalsa_window_set_accels): remove old accel group before
	setting new one.

2015-02-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Make the address book editor accelerators actually work

	* libbalsa/application-helpers.c (libbalsa_window_set_accels):
	new helper;
	(libbalsa_window_get_menu_bar) use it.
	* libbalsa/application-helpers.h: export it.
	* src/ab-main.c (set_address_book_menu_items): use it.

2015-02-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/address-book-text.c (lbab_text_group_address):
	compile with MAKE_GROUP_BY_ORGANIZATION defined.

2015-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/toolbar-prefs.c (customize_dialog_cb), (standard_button_cb),
	(create_toolbar_page), (tp_page_refresh_available),
	(tp_page_add_selected), (tp_page_remove_selected): conditionally
	compiled debug code to check for unimplemented action names.

2015-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix broken toolbar items

	* src/message-window.c: correct action names.
	* src/main-window.c (show_all_headers_change_state),
	(show_preview_pane_change_state), (bw_add_win_action_entries):
	ditto, and implement missing actions.

2015-02-18  Albrecht Dreß

	* src/balsa-mime-widget-text.c (create_text_widget): allow for