@@ -1,3 +1,10 @@
+2015-02-23  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	Actually change spell-checking language
+
+	* src/sendmsg-window.c (sw_spell_detach), (sw_spell_attach):
+	detach any current spell-checker before attaching a new one.
+
 2015-02-22  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	Fix some spacing issues
